--- a/web/index.html
+++ b/web/index.html
@@ -3,13 +3,64 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="style/addBook.css" rel="stylesheet">
         <title>моя библиотека</title>
     </head>
     <body>
         <h2>Библиотека</h2>
-        <button type="button" class="btn btn-primary">Добавить книгу</button>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addBookModal">
+            Добавить книгу
+        </button>
+
+        <!-- Модальное окно добавления книги-->
+    <div class="modal fade" id="addBookModal" tabindex="-1" aria-labelledby="addBookModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="addBookModalLabel">Новая книга</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+            </div>
+            <div class="modal-body">
+                <table id="addBookTable" class="table">
+                    <tr>
+                        <td>Автор</td>
+                        <td>
+                            <input type="text" class="author">
+                            <button id="addAuthorBtn" type="button" class="btn btn-primary">+</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Название</td>
+                        <td>
+                            <input type="text" class="work">
+                            <button id="addWorkBtn" type="button" class="btn btn-primary">+</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Издательство</td>
+                        <td>
+                            <input type="text" id="publishingHouse">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Год издания</td>
+                        <td>
+                            <input type="text" id="publishingYear">
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+              <button type="button" class="btn btn-primary">Сохранить</button>
+            </div>
+          </div>
+        </div>
+    </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/jquery.js" ></script>
+    <script src="js/addBook.js" ></script>
 </html>
