--- a/web/index.html
+++ b/web/index.html
@@ -9,12 +9,56 @@
         <title>моя библиотека</title>
     </head>
     <body>
-        <h2>Библиотека</h2>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addBookModal">
-            Добавить книгу
-        </button>
+        <div id="mainWrap">
+            <h2>Библиотека</h2>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addAuthorModal">
+                Добавить автора
+            </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addBookModal">
+                Добавить книгу
+            </button>
+        </div>
 
-        <!-- Модальное окно добавления книги-->
+    <!-- Модальное окно добавления автора-->
+    <div class="modal fade" id="addAuthorModal" tabindex="-1" aria-labelledby="addAuthorModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="addAuthorModalLabel">Новый автор</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+            </div>
+            <div class="modal-body">
+                <table id="addBookTable" class="table">
+                    <tr>
+                        <td>Имя</td>
+                        <td>
+                            <input type="text" id="authorName">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Отчество</td>
+                        <td>
+                            <input type="text" id="authorFatherName">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Фамилия</td>
+                        <td>
+                            <input type="text" id="authorLastName">
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+              <button type="button" class="btn btn-primary">Сохранить</button>
+            </div>
+          </div>
+        </div>
+    </div>
+        
+
+    <!-- Модальное окно добавления книги-->
     <div class="modal fade" id="addBookModal" tabindex="-1" aria-labelledby="addBookModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -59,6 +103,8 @@
           </div>
         </div>
     </div>
+
+
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/jquery.js" ></script>
