убрал рыбу из вёрстки

--- a/web/index.html
+++ b/web/index.html
@@ -48,8 +48,8 @@
                         </td>
                     </tr>
                 </table>
-                <div id="addAuthSuccessMessage">Автор добавлен</div>
-                <div id="addAuthErrorMessage">Автор добавлен</div>
+                <div id="addAuthSuccessMessage"></div>
+                <div id="addAuthErrorMessage"></div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
