подготовка данных для отправки с фронта на бэк[2]

--- a/web/index.html
+++ b/web/index.html
@@ -81,14 +81,16 @@
                     <tr>
                         <td>Название</td>
                         <td>
-                            <input type="text" class="work">
+                            <input type="text" list="literaryWorks" class="literaryWork">
+                            <datalist id="literaryWorks"></datalist>
                             <button id="addWorkBtn" type="button" class="btn btn-primary">+</button>
                         </td>
                     </tr>
                     <tr>
                         <td>Издательство</td>
                         <td>
-                            <input type="text" id="publishingHouse">
+                            <input type="text" list="publishingHouses" id="publishingHouse">
+                            <datalist id="publishingHouses"></datalist>
                         </td>
                     </tr>
                     <tr>
