--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,20 @@
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addBookModal">
             Добавить книгу
         </button>
+        <br><br>
+        <h3>Cписок книг</h3>
+        <nav>
+            <ul id="bookListPagination" class="pagination"></ul>
+        </nav>
+        <table id="bookListTable" class="table table-striped">
+            <tr>
+                <th>Автор(ы)</th>
+                <th>Название</th>
+                <th>Издательство</th>
+                <th>Год издания</th>
+            </tr>
+        </table>
+
     </div>
 
     <!-- Модальное окно добавления автора-->
@@ -114,4 +128,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/jquery.js" ></script>
     <script src="js/addBook.js" ></script>
+    <script src="js/hintLists.js" ></script>
+    <script src="js/bookList.js" ></script>
 </html>
