--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
         
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="style/addBook.css" rel="stylesheet">
+        <link href="style/table.css" rel="stylesheet">
         <title>моя библиотека</title>
     </head>
     <body>
@@ -24,10 +25,15 @@
         </nav>
         <table id="bookListTable" class="table table-striped">
             <tr>
-                <th>Автор(ы)</th>
-                <th>Название</th>
-                <th>Издательство</th>
-                <th>Год издания</th>
+                <th name="author" isSorted="asc">
+                    Автор(ы)
+                    <svg id="sortIcon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
+                    </svg>
+                </th>
+                <th name="name">Название</th>
+                <th name="publishingHouse">Издательство</th>
+                <th name="publishingYear">Год издания</th>
             </tr>
         </table>
 
@@ -130,4 +136,5 @@
     <script src="js/addBook.js" ></script>
     <script src="js/hintLists.js" ></script>
     <script src="js/bookList.js" ></script>
+    <script src="js/sort.js" ></script>
 </html>
